--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,11 +1,13 @@
-<h2>Games</h2>
+<div class="section-header">
+  <h1 class="section-heading">Games</h1>
+</div>
 
 
 <% @games.each do |game| %>
 
   <div class="game">
     <%= link_to game.name, game_path(game), class: "game-name" %>
-    <%= link_to "Play #{game.name}", { controller: game.table_name, action: 'new'}, method: :get, class: "btn btn-on-white" %>
+    <%= link_to "Play #{game.name}", { controller: game.table_name, action: 'new'}, method: :get, class: "btn btn-on-white game-btn" %>
   </div>
 
 <% end %>
