--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <header>
   <nav class="navbar group">
     <div class="go-left">
-      <h1 class="navbar-header">RubyGames</h1>
+      <h1 class="navbar-header"><%= link_to "RubyGames", games_path %></h1>
     </div>
 
     <div class="go-right">
@@ -55,8 +55,9 @@
   </nav>
 </header>
 
-
+<section class="yield">
 <%= yield %>
+</section>
 
 
 </body>
