--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="user-group">
 <% if current_user == @user %>
-  <%= link_to "Edit My Account", edit_user_registration_path(current_user), class: "user-edit btn btn-on-white" %>
+  <%= link_to "Edit My Account", edit_user_registration_path(current_user), class: "user-edit btn btn-on-white go-left" %>
 <% end %>
 
 <p class="user-joined">Joined: <%= @user.created_at.strftime("%d %B, %Y") %></p>
