--- a/app/views/games/games.html.erb
+++ b/app/views/games/games.html.erb
@@ -27,7 +27,7 @@
   <% @in_progress_games.each do |game| %>
     <%= link_to controller: game.class.name.tableize, action: 'edit', id: game, method: :get do %>
     <div class="list-item">
-        <h4 class="list-title"><%= Game.find_by_table_name(game.class.name.tableize).name %></h4>
+        <h4 class="list-game"><%= Game.find_by_table_name(game.class.name.tableize).name %></h4>
         <h3 class="list-title"><%= game.player1_user.username %> <small>vs</small> <%= game.player2_user.username %></h3>
         <p class="list-subtitle">Last played: <%= distance_of_time_in_words_to_now(game.updated_at)%> ago</p>
         <div class="list-message wordwrap">
@@ -52,7 +52,7 @@
   <% @finished_games.each do |game| %>
     <%= link_to controller: game.class.name.tableize, action: 'show', id: game, method: :get do %>
     <div class="list-item">
-        <h4 class="list-title"><%= Game.find_by_table_name(game.class.name.tableize).name %></h4>
+        <h4 class="list-game"><%= Game.find_by_table_name(game.class.name.tableize).name %></h4>
         <h3 class="list-title"><%= game.player1_user.username %> <small>vs</small> <%= game.player2_user.username %></h3>
         <p class="list-subtitle">Last played: <%= distance_of_time_in_words_to_now(game.updated_at)%> ago</p>
         <div class="list-message wordwrap">
